# HTTP-1.1-WebServer

./: .gitignore  README.md
Client/: client  client.cpp  commands.txt
Web-Client/: CMakeLists.txt  commands.txt  compile_commands.json  main  main.cpp
Web-Server/: CMakeLists.txt  compile_commands.json  config  main.cpp  mime_types.txt
Web-Server/data/: mime_types.txt
Web-Server/headers/: Config.h  GetRequest.h  MIMETypesLoader.h  PostRequest.h  Request.h  Server.h  ServerWorker.h  Socket.h  ThreadPool.h  Util.h
Web-Server/sources/: Config.cpp  GetRequest.cpp  MIMETypesLoader.cpp  PostRequest.cpp  Request.cpp  Server.cpp  ServerWorker.cpp  Socket.cpp  ThreadPool.cpp  Util.cpp
